--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
